@@ -876,6 +876,7 @@
 * Payflow Pro: Add `stored_credential` fields [ajawadmirza] #4277
 * Decidir Plus: Add `fraud_detection` fields [naashton] #4289
 * Elavon: Pass through ssl_email for verify transactions [ankurspreedly] #5502
+* Nuvei: Add address compoenents for all transactions [ankurspreedly] #5511
 
 == Version 1.124.0 (October 28th, 2021)
 * Worldpay: Add Support for Submerchant Data on Worldpay [almalee24] #4147
